yes nakapag commit din sa wakas :D , konting kembot pa. hmmm

--- a/s1.html
+++ b/s1.html
@@ -6,7 +6,7 @@
   <!-- logic to load page-specific CSS if needed -->
 </head>
 
-<body>
+<body class = "body">
 
 <div id="header">
   <link href="s1.css" rel="stylesheet" type="text/css" />
@@ -25,7 +25,7 @@
 			<li ><a class="space" ></a></li>
 			<li >
 				<form id="tfnewsearch" method="get" action="http://www.google.com">
-					<input type="text" class="tftextinput" name="q" size="31" maxlength="120" >
+					<input type="text" class="tftextinput" name="q" size="32" maxlength="120" >
 					<input type="submit" value="Go" class="tfbutton">
 				</form>	
 			</li>
@@ -38,26 +38,94 @@
 
 <div class ="content"> <!-- start of page content -->
 	<div class = "row1"> 
-		<h4> Website News </h4>
+		<div id = "r1Header"> Website News </div>
+		<div id = "r1ContentDate"> 
+			<p>  News Title  </p><span style="float:right"> Date </span>			
+			
+		</div>
+		<div id = "r1Content"> University of Missouri system 
+			and the head of its flagship campus resigned Monday 
+			with the football team and others on campus in open 
+			revolt.
+		</div>
+		<div id = "r1ContentDate"> 
+			<p>  News Title  </p><span style="float:right"> Date </span>			
+			
+		</div>
+		<div id = "r1Content"> Create better web typography in minutes. 
+		Combine, compare and style web fonts from the entire Google Fonts 
+		library using simple visual controls.
+		</div>
 	</div>
-	<div class = "row2"> 
-		<img src="tree.jpg" alt="Tree" style="width:250px;height:200px;">
+	<div class = "row2"> 		
+		<div class="transbox">
+		<img src="tree.jpg" alt="Tree" style="width:690px;height:370px;">
+			<p style = "text-align : center">Does your business need to branch out?. 
+			<a class="Buttonr2" href="/url 3">Read more...</a>
+			</p>
+		</div>		
 	</div>
 	
 	<div class = "row3"> 
-		<h4> Personal Touch </h4>
+		<div id = "r3Header"> A Personal Touch </div>
+		<div id = "r3Content"> University of Missouri system 
+			and the head of its flagship campus resigned Monday 
+			with the football team and others on campus in open 
+			revolt.
+			<img src="boy.png" alt="FreeLance" style=" width:220px;height:110px;">
+			Create better web typography in minutes. 
+			Combine, compare and style web fonts.
+		</div>
+
 	</div>
 
 </div>
 <div class ="content2"> <!-- start of page content -->
-	<div class = "row1"> 
-		<h4> Website News </h4>
+
+	<div class = "row4"> 
+		<div id = "r4Header"> Treating Clients Well </div>
+		<div id = "r4Content"> University of Missouri system 
+			and the head of its flagship campus.
+			<img src="happyClients.jpg" alt="Fish" style=" width:250px;height:150px;">
+			Create better web typography in minutes. 
+			Combine, compare and style web fonts.
+		</div>
 	</div>
-	<div class = "row2"> 
-		<img src="tree.jpg" alt="Mountain View" style="width:250px;height:200px;">
+	<div class = "row5"> 
+		<div class = "panel1">
+			<div class = "rowrow1"> 
+				<div id = "r5Header"> Clients One </div>
+				<div id = "r5Content"> University of Missouri system 
+					and the head of its flagship campus.
+					Create better web typography in minutes. 
+					Combine, compare and style web fonts.
+				</div>
+			</div>
+			
+			<div class = "rowrow2"> 
+				<div id = "r5Header"> Clients Two </div>
+				<div id = "r5Content"> University of Missouri system 
+					and the head of its flagship campus.
+					Create better web typography in minutes. 
+					Combine, compare and style web fonts.
+			</div>
+			
+		</div>	
+		</div>
+		
+		<div class = "panel2">
+			<div class = "rowrow3"> 
+				<div id = "r5Header"> Why We're Special </div>
+				<div id = "r5Content"> University of Missouri system 
+					and the head of its flagship campus.
+					Create better web typography in minutes. 
+					Combine, compare and style web fonts.
+			</div>
+			</div>
+		</div>
 	</div>
 	
-	<div class = "row3"> 
+	<div class = "row6"> 
 		<h4> Personal Touch </h4>
 	</div>
 
