First Assign Done?, learn how to use display, hover,css

--- a/s1.html
+++ b/s1.html
@@ -94,7 +94,7 @@
 	<div class = "row5"> 
 		<div class = "panel1">
 			<div class = "rowrow1"> 
-				<div id = "r5Header"> Clients One </div>
+				<div id = "r5Header"> Clients Pack One </div>
 				<div id = "r5Content"> University of Missouri system 
 					and the head of its flagship campus.
 					Create better web typography in minutes. 
@@ -103,39 +103,59 @@
 			</div>
 			
 			<div class = "rowrow2"> 
-				<div id = "r5Header"> Clients Two </div>
+				<div id = "r5Header"> Clients Pack Two </div>
 				<div id = "r5Content"> University of Missouri system 
 					and the head of its flagship campus.
 					Create better web typography in minutes. 
 					Combine, compare and style web fonts.
-			</div>
+				</div>
 			
-		</div>	
+			</div>	
 		</div>
 		
 		<div class = "panel2">
 			<div class = "rowrow3"> 
 				<div id = "r5Header"> Why We're Special </div>
-				<div id = "r5Content"> University of Missouri system 
-					and the head of its flagship campus.
-					Create better web typography in minutes. 
-					Combine, compare and style web fonts.
-			</div>
+				<div id = "r5Content"> Companies that focus on their unique <span><img src="special.jpg" alt="Special" style=" width:200px;height:100px; display : inline-flex; float:right;"></span>
+					 abilities are best-positioned for growth. 
+					 But most firms, like most people, aren’t very 
+					 aware of their extraordinary capabilities, not to 
+					 mention their extraordinary deficiencies..					
+				</div>
 			</div>
 		</div>
 	</div>
 	
 	<div class = "row6"> 
-		<h4> Personal Touch </h4>
+		<div class = "panel3">
+			<div class = "rowrow11"> 
+				<div id = "r5Header"> Clients Pack Three </div>
+				<div id = "r5Content"> University of Missouri system 
+					and the head of its flagship campus.
+					Create better web typography in minutes. 
+					Combine, compare and style web fonts.
+				</div>
+			</div>
+			
+			<div class = "rowrow22"> 
+				<div id = "r5Header"> Testimonials </div>
+				<div id = "r5Content"> University of Missouri system 
+					and the head of its flagship campus.
+					Create better web typography in minutes. 
+					Combine, compare and style web fonts.
+			</div>
+				
+				</div>	
+			</div>
+		</div>
+
 	</div>
 
-</div>
+	<!-- start of footer loaded from template -->
 
-<!-- start of footer loaded from template -->
+	<div id="footer">
+	  <p>copyright 2015</p>
+	</div>
 
-<div id="footer">
-  <p>copyright 2015</p>
-</div>
-
-</body>
-</html>
+	</body>
+	</html>
